tests/snapshots/game_board_tests__board after trying to move block through other block.snap
---
source: tests/game_board_tests.rs
expression: renderer.get_snapshot()
---
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|   +      |
|   +      |
|   +      |
|   +xx    |
|    xx    |
------------
