tests/snapshots/game_board_tests__board before moving down twice.snap
---
source: tests/game_board_tests.rs
expression: renderer.get_snapshot()
---
|          |
|    ++    |
|    ++    |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
------------
