tests/snapshots/game_board_tests__board before rows cleared.snap
---
source: tests/game_board_tests.rs
expression: renderer.pop_snapshot()
---
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|    x     |
|    x     |
|    x     |
|    x     |
|    x  x  |
|    x  x  |
|xxxxxxxxxx|
|xxxxxxxxxx|
------------
