tests/snapshots/game_board_tests__board with block at bottom after attempting to move down twice.snap
---
source: tests/game_board_tests.rs
expression: renderer.get_snapshot()
---
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|    ++    |
|    ++    |
------------
