tests/snapshots/game_board_tests__it_renders_an_empty_board_after_initialising.snap
---
source: tests/game_board_tests.rs
expression: renderer.get_snapshot()
---
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|__________|
