tests/snapshots/game_board_tests__line rotated once.snap
---
source: tests/game_board_tests.rs
expression: renderer.pop_snapshot()
---
|          |
|          |
|          |
|          |
|          |
|    ++++  |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
|          |
------------
